ui/styles/base.css: fix stretch on Firefox
-moz-available doesn't actually work, so we apply a Firefox-specific override.

--- a/ui/styles/base.css
+++ b/ui/styles/base.css
@@ -8,3 +8,13 @@ body {
   min-height: stretch;
   @apply flex flex-col;
 }
+
+@supports (min-height:-moz-available) {
+  html {
+    height: 100vh;
+  }
+
+  body {
+    min-height: 100vh;
+  }
+}
